restructuring: moved all μS-related code to l10n-ms subfolder. + added parent pom.xml